--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <div class="fw-normal text-light row text-center mx-auto">
                         <h2 class="h3 text-center p-5 pt-1">  Welcome to Aysh, the home of inventions. To serve you more excellently, we have rebranded to focus on just five categories:
                         </h2>
-                            <a href="#education" class="btn ayshitems btn-dark  col-lg-2  m-1   col-md-4 ">
+                            <a href="https://bigezo.com" class="btn ayshitems btn-dark  col-lg-2  m-1   col-md-4 ">
                             <svg xmlns="http://www.w3.org/2000/svg" height="40" fill="#ccad00" class="bi bi-cpu" viewBox="0 0 16 16" focusable="false">
                                     <path d="M5 0a.5.5 0 0 1 .5.5V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2h1V.5a.5.5 0 0 1 1 0V2A2.5 2.5 0 0 1 14 4.5h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14v1h1.5a.5.5 0 0 1 0 1H14a2.5 2.5 0 0 1-2.5 2.5v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14h-1v1.5a.5.5 0 0 1-1 0V14A2.5 2.5 0 0 1 2 11.5H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2v-1H.5a.5.5 0 0 1 0-1H2A2.5 2.5 0 0 1 4.5 2V.5A.5.5 0 0 1 5 0zm-.5 3A1.5 1.5 0 0 0 3 4.5v7A1.5 1.5 0 0 0 4.5 13h7a1.5 1.5 0 0 0 1.5-1.5v-7A1.5 1.5 0 0 0 11.5 3h-7zM5 6.5A1.5 1.5 0 0 1 6.5 5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3zM6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
                                   </svg> <br>
@@ -209,7 +209,7 @@
                                 A full fledged web application for primary schools that enables the school and the students/parents to interact.     </h4>
                             <h4 class="list-group-item btn-lg fw-bold text-primary btn-dark text-warning">
 
-                                UGX <i class="badge  bg-grey text-danger">10,000</i> <a class=" text-warning btn btn-lg">@Child/  Term</a>
+                                UGX <i class="badge  bg-grey text-danger">15,000</i> <a class=" text-warning btn btn-lg">@Child/  Term</a>
    </h4>
    <h4 class="card-text"> It has all the main features that are needed such as;
 </h4>
@@ -222,7 +222,7 @@
 
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-md btn-info text-white" onclick="window.location.href='docs/musomesa.pdf' ">READ MORE 
+                                    <button type="button" class="btn btn-md btn-info text-white" onclick="window.location.href='https://bigezo.com' ">READ MORE 
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                                             <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
@@ -252,7 +252,7 @@
                                  generate fully designed reports for every child.  </h4>
                                  <h4 class="list-group-item btn-lg fw-bold text-primary btn-dark text-warning">
 
-                                    UGX <i class="badge  bg-grey text-danger">3,000</i> <a class=" text-warning btn btn-lg">@Child/  Term</a>
+                                    UGX <i class="badge  bg-grey text-danger">5,000</i> <a class=" text-warning btn btn-lg">@Child/  Term</a>
        </h4>
                                
                             
@@ -265,7 +265,7 @@
 
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-md btn-danger text-white" onclick="window.location.href='docs/bigezo.pdf' ">READ MORE
+                                    <button type="button" class="btn btn-md btn-danger text-white" onclick="window.location.href='https://bigezo.com' ">READ MORE
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                                             <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
                                             <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
